--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "devDependencies": {
     "angular": "^1.3.15",
+    "angular-animate": "^1.3.15",
     "browserify": "~3.46.0",
     "connect-livereload": "~0.4.0",
     "express": "~4.1.1",
